# DjangoHW

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_article_owner.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0002_product_manufactured_at.py  0003_feedback.py  0004_version.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_detail.html  contacts.html  feedback_form.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_nav_menu.html
config/: settings.py  urls.py
fixtures/: 01_catalog_category_data.json  02_catalog_product_data.json  03_blog_article_data.json  04_catalog_version_data.json  05_groups.json  06_contacts.json
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  recovery_form.html  user_form.html
