[tool.poetry]
name = "djangohw"
version = "0.1.0"
description = ""
authors = ["Stas <stas_sever@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
